tests/compile_fail/state_machine/invalid_name.rs
use moku::*;

#[state_machine(123)]
mod blinky {}

fn main() {}
