tests/compile_fail/state_machine/invalid_name.stderr
error: expected identifier
 --> tests/compile_fail/state_machine/invalid_name.rs:3:17
  |
3 | #[state_machine(123)]
  |                 ^^^
